<resources>
    <string name="app_name">Asteroides</string>
    <string name="jugarText">JUGAR</string>
    <string name="configText">CONFIGURAR</string>
    <string name="acercaDeText">ACERCA DE</string>
    <string name="salirText">SALIR</string>
    <string name="prefText">Preferències</string>
    <string name="aboutText">Aquest programa ha estat desenvolupat
        dins del mòdul MP08 - Programació Multimèdia i Dispositius Mòbils, de Segon de DAM</string>\
    <string name="tDra" translatable="false">TransitionDrawable</string>
    <string name="aUtils" translatable="false">AnimationUtils </string>
    <string name="aDra" translatable="false">AnimationDrawable </string>
    <string name="tDra2" translatable="false">Arribarà? </string>
    <string name="mN" translatable="false">Mover Nave </string>
    <string name="qP" translatable="false">Què pasará? </string>
</resources>